--- a/src/App/student/Student.scss
+++ b/src/App/student/Student.scss
@@ -9,9 +9,10 @@ ul {
   display: flex;
   flex-wrap: wrap;
   margin-left: 20px;
+  margin-right: 20px;
 }
 
-.student-item {
+.student-item, input {
   width: 70px;
   padding: 5px 20px;
   margin-right: 20px;
@@ -28,4 +29,8 @@ main {
   align-items: center;
   justify-content: space-between;
   margin: 5px 30px;
+}
+
+input {
+  background: white;
 }
