[xdong] finish task-1: show all ungrouped trainees

--- a/src/App/trainee/Trainee.scss
+++ b/src/App/trainee/Trainee.scss
@@ -1,4 +1,4 @@
-.student {
+.trainee {
   margin-left: 15%;
   margin-right: 15%;
   background: #eeeeee;
@@ -12,7 +12,7 @@ ul {
   margin-right: 20px;
 }
 
-.student-item, input {
+.trainee-item, input {
   width: 70px;
   padding: 5px 20px;
   margin-right: 20px;
